--- a/back-end/src/Cwi.Treinamento.TesteAutomatizado.Tests/Cwi.Treinamento.TesteAutomatizado.Tests.csproj
+++ b/back-end/src/Cwi.Treinamento.TesteAutomatizado.Tests/Cwi.Treinamento.TesteAutomatizado.Tests.csproj
@@ -33,4 +33,8 @@
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.22" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Employee\" />
+  </ItemGroup>
+
 </Project>
