--- a/back-end/src/Cwi.Treinamento.TesteAutomatizado.Tests/Cwi.Treinamento.TesteAutomatizado.Tests.csproj
+++ b/back-end/src/Cwi.Treinamento.TesteAutomatizado.Tests/Cwi.Treinamento.TesteAutomatizado.Tests.csproj
@@ -6,14 +6,14 @@
 
   <ItemGroup>
     <None Remove="appsettings.json" />
-    <None Remove="speckflow.json" />
+    <None Remove="specflow.json" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="speckflow.json">
+    <Content Include="specflow.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
